--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Weather Application</string>
     <string name="open_view_pager">Open View Pager</string>
     <string name="open_recycler_view">Open Recycler View</string>
+    <string name="add_city">Add City</string>
+    <string name="add">Add</string>
+    <string name="city_name">City Name</string>
 </resources>
